--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -25,3 +25,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@font-face {
+  font-family: 'Cherry'; 
+  src: url('../../public/fonts/CherryBomb-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
