--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 100, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
@@ -26,9 +26,15 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-@font-face {
+/*@font-face {
   font-family: 'Cherry'; 
   src: url('../../public/fonts/CherryBomb-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}*/
+@font-face {
+  font-family: 'Verdana'; 
+  src: url('../../public/fonts/Verdana.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
